fixed horizontal scroll bug for mid range size devices

--- a/src/app/components/solrSearchInput/solrSearchInput.directive.scss
+++ b/src/app/components/solrSearchInput/solrSearchInput.directive.scss
@@ -77,6 +77,10 @@
     display: flex;
     align-items: center;
 
+    .input-group-btn {
+      width: auto;
+    }
+
     .search-group {
       display: flex;
       margin: 2px;
